// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 1`] = `
{
  "@angular/build": "^21.X.X",
  "@angular/cli": "^21.X.X",
  "@angular/compiler-cli": "^21.X.X",
  "angular-eslint": "0.0.0-e2e",
  "eslint": "^9.39.2",
  "jsdom": "^27.1.0",
  "ng-packagr": "^21.X.X",
  "typescript": "~5.X.X",
  "typescript-eslint": "8.48.1",
  "vitest": "^4.0.8"
}
`;

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 2`] = `
"// @ts-check
import eslint from "@eslint/js";
import { defineConfig } from "eslint/config";
import tseslint from "typescript-eslint";
import angular from "angular-eslint";

export default defineConfig([
  {
    files: ["**/*.ts"],
    extends: [
      eslint.configs.recommended,
      tseslint.configs.recommended,
      tseslint.configs.stylistic,
      angular.configs.tsRecommended,
    ],
    processor: angular.processInlineTemplates,
    rules: {
      "@angular-eslint/directive-selector": [
        "error",
        {
          type: "attribute",
          prefix: "app",
          style: "camelCase",
        },
      ],
      "@angular-eslint/component-selector": [
        "error",
        {
          type: "element",
          prefix: "app",
          style: "kebab-case",
        },
      ],
    },
  },
  {
    files: ["**/*.html"],
    extends: [
      angular.configs.templateRecommended,
      angular.configs.templateAccessibility,
    ],
    rules: {},
  }
]);
"
`;

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 3`] = `
{
  "builder": "@angular-eslint/builder:lint",
  "options": {
    "lintFilePatterns": [
      "src/**/*.ts",
      "src/**/*.html",
    ],
  },
}
`;

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 4`] = `
"// @ts-check
import { defineConfig } from "eslint/config";
import rootConfig from "../../eslint.config.js";

export default defineConfig([
  ...rootConfig,
  {
    files: ["**/*.ts"],
    rules: {
      "@angular-eslint/directive-selector": [
        "error",
        {
          type: "attribute",
          prefix: "app",
          style: "camelCase",
        },
      ],
      "@angular-eslint/component-selector": [
        "error",
        {
          type: "element",
          prefix: "app",
          style: "kebab-case",
        },
      ],
    },
  },
  {
    files: ["**/*.html"],
    rules: {},
  }
]);
"
`;

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 5`] = `
{
  "builder": "@angular-eslint/builder:lint",
  "options": {
    "eslintConfig": "projects/another-app/eslint.config.js",
    "lintFilePatterns": [
      "projects/another-app/**/*.ts",
      "projects/another-app/**/*.html",
    ],
  },
}
`;

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 6`] = `
"// @ts-check
import { defineConfig } from "eslint/config";
import rootConfig from "../../eslint.config.js";

export default defineConfig([
  ...rootConfig,
  {
    files: ["**/*.ts"],
    rules: {
      "@angular-eslint/directive-selector": [
        "error",
        {
          type: "attribute",
          prefix: "lib",
          style: "camelCase",
        },
      ],
      "@angular-eslint/component-selector": [
        "error",
        {
          type: "element",
          prefix: "lib",
          style: "kebab-case",
        },
      ],
    },
  },
  {
    files: ["**/*.html"],
    rules: {},
  }
]);
"
`;

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 7`] = `
{
  "builder": "@angular-eslint/builder:lint",
  "options": {
    "eslintConfig": "projects/another-lib/eslint.config.mjs",
    "lintFilePatterns": [
      "projects/another-lib/**/*.ts",
      "projects/another-lib/**/*.html",
    ],
  },
}
`;

exports[`new-workspace-type-module > should pass linting after creating a new workspace from scratch using @angular-eslint 8`] = `
"
Linting "new-workspace-type-module"...

All files pass linting.


Linting "another-app"...

All files pass linting.


Linting "another-lib"...

All files pass linting.
"
`;
